--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "crud-api-project2",
+  "name": "traintrack-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -35,6 +35,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+     "jest": "^29.6.0",
+    "supertest": "^6.3.3"
   }
 }
